# Mobile_robot_controllers

./: README.md
src/omni_robot_control/: CMakeLists.txt  package.xml
src/omni_robot_control/config/: omni_control copy.yaml
src/omni_robot_control/launch/: omni_control.launch
src/robot_controllers/: NOTE
src/robot_controllers/reference_path_generator/: CMakeLists.txt  package.xml
src/robot_controllers/reference_path_generator/launch/: ref_path_gen.launch
src/robot_controllers/reference_path_generator/src/: ref_path_generator.cpp
src/robot_controllers/robot_controllers/: CMakeLists.txt  package.xml
src/robot_controllers/robot_description/: CMakeLists.txt  package.xml
src/robot_controllers/robot_description/launch/: loadrobot.launch
src/robot_controllers/robot_description/rviz/: rvizSave.rviz
src/robot_controllers/robot_description/urdf/: Omni_build copy.xacro  Omni_build.xacro  omni.gazebo  vast01_omni.urdf.xacro  vast1.gazebo
src/robot_controllers/robot_dynamic_controllers/: CMakeLists.txt  package.xml
src/robot_controllers/robot_dynamic_controllers/cfg/: BackSMCcontroller_reconfig.cfg  PIDcontroller_reconfig.cfg  RBFNN_SMC_reconfig.cfg  SMCcontroller_reconfig.cfg  control_parameters.yaml
src/robot_controllers/robot_dynamic_controllers/include/: RBFneuralNetwork.h
src/robot_controllers/robot_dynamic_controllers/launch/: Backstepping_SMC_controller.launch  RBFNN_SMC.launch  SMC_controller.launch  robot_dynamic_controllers.launch
src/robot_controllers/robot_dynamic_controllers/src/: Backstepping_SMC.cpp  RBFneuralNetwork.cpp  (+3 more)
src/robot_controllers/robot_kinematic_controllers/: CMakeLists.txt  package.xml
src/robot_controllers/robot_pid_controller/: CMakeLists.txt  package.xml
src/robot_controllers/robot_pid_controller/include/: PID.h
src/robot_controllers/robot_pid_controller/src/: PID.cpp  robot_controllers_PID.cpp
src/teleop_twist_keyboard/: teleop_twist_keyboard.py
(+6 files in other folders)
